Update to include Denis' instructions
Former-commit-id: cb0016fe27d8ff5c1cd6e60764a1019965723126